# chicago-crime-search

./: .cursorignore  .gitignore  .gitmodules  README.md  clickhouse-cmd.sh  links.txt  manticore-shell.sh  process_0_reset_databases.py  process_1_load_csv.py  process_2_superset.py  process_3_encode_sentence.py  pyproject.toml  reset-docker.sh  search_demo.py  sql-shell.sh  start-docker.sh  start-search-demo.sh
docker/: .dockerignore  .gitignore  clickhouse-server-config-override.xml  docker-compose.yaml  manticore-update-config.sh  manticore.conf.initial  nginx.conf
py_index/: clickhouse_database_ops.py  database_settings.py  manticore_database_ops.py
py_index/search_demo/: __init__.py  components.py
py_index/search_demo/tabs/: __init__.py  clickhouse_tab.py  manticore_autocomplete_tab.py  manticore_facet_tab.py  manticore_highlights_tab.py  manticore_knn_tab.py  manticore_tab.py  viz_tab.py
